<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2025 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/map_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView

        android:id="@+id/streetviewpanorama"
        class="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/street_view_panorama_events_demo_label" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <TextView
            android:id="@+id/change_pano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_another_panorama" />

        <TextView
            android:id="@+id/change_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pan_camera" />

        <TextView
            android:id="@+id/click_pano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_screen" />

        <TextView
            android:id="@+id/long_click_pano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_press_screen" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
